Add authentication using Passport and sessions

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.0",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "jest": "^26.4.1",
