--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=production node app.js",
     "dev": "cross-env NODE_ENV=development nodemon app.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "test:coverage": "npm test --coverage",
+    "test:coverage": "npm test -- --coverage",
     "coverage": "start coverage/lcov-report/index.html"
   },
   "author": "",
